# VideoGists

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: build-portable.example.ps1  build-portable.ps1  clean-temp.ps1
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs  storage.rs  youtube.rs
src/components/: GistCard.tsx  GistForm.tsx  Modal.tsx  TitleBar.tsx  ViewSwitcher.tsx
